# nano-gpt

./: .gitignore  Makefile  README.md  Train.ipynb  download.sh  models.py  pyproject.toml  setup.cfg  style.sh  train.py
